CSS/index.css
/* html {
  margin: 0;
  padding: 0;
} */
a {
  text-decoration: none;
  color: inherit;
  font-size: inherit;
}
body {
  margin: 0;
  padding: 0;
  font-family: Monaco, Helvetica, Geneva, "system-ui", Ariel, georgia,
    "sans-serif";
  color: rgb(41, 37, 36);
  transition: all 0.65s;
}

.logo a {
  justify-content: start;
  width: auto;
  height: 32px;
  padding-top: 5px;
  margin-block: 0.8rem 0;
  transition-duration: 0.1s;
}

.logo a > img {
  width: inherit;
  height: inherit;
  object-fit: contain;
  object-position: center center;
  cursor: pointer;
}

.mode {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-block: 0.65rem;
  width: 30px;
  height: 30px;
  border: none;
  color: rgb(87, 83, 78);
  border-radius: 20px;
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 5px 1px;
  cursor: pointer;
}

.navbar {
  min-width: 32rem;
  display: flex;
  flex-direction: row;
  padding: 0px 32px;
  justify-content: end;
  align-items: center;
  box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 15px 2px;
}

#navtabs {
  padding: 0;
  margin-block: 0.8rem 0;
}

.navs {
  flex: 1 1 0%;
  display: flex;
  align-items: center;
  flex-direction: row;
  column-gap: 2px;
}

.nav-tabs {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 18px 10px;
  width: 100px;
  font-weight: 600;
  cursor: pointer;
  transition-duration: 0.2s;
  border-radius: 5px;
}

.nav-tabs:hover {
  background-color: rgba(97, 97, 97, 0.26);
}

.active {
  color: rgb(255, 136, 25);
}

.authbtns {
  padding-inline: 0.4rem;
}

.authbtn {
  display: flex;
  margin-left: 1rem;
  gap: 2.4rem;
  background-color: white;
  color: rgb(56, 56, 56);
  width: 100px;
  height: 35px;
  align-items: center;
  border: 1px solid lightgray;
  border-radius: 50px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 5px 1px;
  font-weight: bold;
  cursor: pointer;
  transition-duration: 0.1s;
}

.authbtn:hover {
  background-color: rgb(255, 136, 25);
  color: rgb(255, 255, 255);
}

.saved {
  height: 40px;
  max-width: 100%;
  padding: 1.25rem;
  margin-left: 0.4rem;
  margin-block: 0.75rem auto;
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 5px;
  background-color: rgb(255, 136, 25);
  border: none;
  border-radius: 20px;
  font-weight: 600;
  cursor: pointer;
  color: white;
  text-shadow: rgba(0, 0, 0, 0.2) 0px 0px 5px;
  transition-duration: 0.1s;
}

.saved:hover {
  filter: brightness(90%);
}

.saved i {
  display: flex;
  justify-content: center;
  align-items: center;
}

.flex {
  display: flex;
  margin-block-start: 0.5rem;
  gap: 0.8rem;
}

.flex-col {
  flex-direction: column;
}

.flex-row {
  flex-direction: row;
  justify-content: space-evenly;
}

.has-state {
  position: relative;
  overflow: hidden;
}

.has-state::after {
  content: "";
  position: absolute;
  inset: 0;
  transition: inherit;
}

:has-state:where(:hover, :focus-visible):not(:active)::after {
  background-color: inherit;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.slider {
  --gap: 8px;
  position: relative;
  overflow-x: auto;
  scroll-snap-type: inline mandatory;
  padding-block-end: 5px;
}

.slider:hover {
  cursor: pointer;
}

.slider::-webkit-scrollbar {
  height: 4px;
}

.sider::-webkit-scrollbar-thumb {
  background-color: transparent;
}

.slider:where(:hover, :focus-within)::-webkit-scrollbar-thumb {
  background-color: rgb(241, 243, 230);
}

.slider-wrapper {
  display: flex;
  align-self: stretch;
  gap: 6px;
  transition: all 0.15s ease-in;
}

.slider-item {
  min-width: calc(45% - 6rem);
  scroll-snap-align: start;
}

.load-more-card {
  display: flex;
  color: rgb(41, 37, 36);
  justify-content: center;
  align-items: center;
  height: calc(100% - 54px);
  border-radius: 6px;
  gap: 8px;
  border: 1px solid rgb(232, 222, 213);
  background-color: rgb(254, 241, 222);
}

.section-tag {
  text-align: center;
  margin-inline: 0.6rem 0.4rem;
}

.section-title {
  margin-block-end: 12px;
}

.badge-btn {
  height: 40px;
  display: flex;
  border-radius: 1.5rem;
  background-color: rgb(250, 187, 92);
  color: inherit;
  max-width: max-content;
  padding-inline: 16px;
  align-items: center;
}

.tag {
  text-align: center;
}

.tag-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 8px;
  margin-block-start: 24px;
}

.tag .section-text {
  max-width: 50ch;
  margin-inline: auto;
}

.footer .logo {
  display: none;
}

.footer {
  padding: 1rem;
  place-self: center;
  display: flex;
  flex-grow: 1;
  justify-content: center;
  align-items: center;
  column-gap: 12px;
  border-block-start: 1px solid inherit;
}
@media (max-width: 630px) {
  .navbar {
    padding: 10px;
    margin-inline: 1.25rem;
  }

  .logo {
    justify-content: start;
    flex: 1 1 0%;
  }

  .nav-tabs {
    display: none;
  }

  .authbtns {
    justify-content: end;
    flex: 1 1 0%;
  }

  .authbtn {
    font-size: 12px;
  }

  .saved {
    display: none;
  }

  .savedtext {
    display: none;
  }

  .footer {
    min-width: fit-content;
    margin-inline: 6rem;
    margin-bottom: 2.4rem;
  }
}

